--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header" id="header">
         <div class="container header-content">
             <a href="#" class="logo">
-             
+
                 <img src="images/logoico.png" alt="Recipe book preview" class="logo-icon">
                 <span class="logo-text">ProContentCook</span>
             </a>
@@ -33,8 +33,26 @@
                 <a href="#faq" class="nav-link">FAQ</a>
             </nav>
 
+            <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <line x1="3" y1="12" x2="21" y2="12"></line>
+                    <line x1="3" y1="18" x2="21" y2="18"></line>
+                </svg>
+                <svg class="close-icon hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+        </div>
 
-
+        <nav class="nav-mobile hidden" id="mobileNav">
+            <a href="#features" class="nav-link-mobile">Features</a>
+            <a href="#how-it-works" class="nav-link-mobile">How It Works</a>
+            <a href="#testimonials" class="nav-link-mobile">Testimonials</a>
+            <a href="#pricing" class="nav-link-mobile">Pricing</a>
+            <a href="#faq" class="nav-link-mobile">FAQ</a>
+        </nav>
     </header>
 
     <!-- Hero Section -->
@@ -43,9 +61,10 @@
             <div class="hero-content">
                 <h1 class="hero-title">
                     Done-for-you nutrition
-                    <span class="text-primary">resources for coaches</span>
+                    resources for coaches
                     who Actually care
                 </h1>
+
 
                 <p class="hero-description">
                     We create the client-ready recipe books, guides, and Instagram templates you don't have time to make
@@ -446,7 +465,7 @@
                             </li>
                         </ul>
 
-                          <a href="#pricing" class="btn btn-primary btn-lg btn-highlight">
+                        <a href="#pricing" class="btn btn-primary btn-lg btn-highlight">
                             <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
                                 <circle cx="9" cy="21" r="1"></circle>
