--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         <div class="container hero-grid">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    Done-for-you nutrition
-                    resources for coaches
-                    who Actually care
+                    Done-for-you nutrition resources for coaches who Actually care
                 </h1>
 
 
